src/index.css
@import 'tailwindcss';

@custom-variant dark (&:is(.dark *));

@theme {
  --color-primary: #ffffff;
  --color-secondary: #fefce8;
  --color-component: #fff7ee;
  --color-subcomponent: #f8ece1;
  --color-accent: #f54900;
  --color-text-primary: #7e2a0c;
  --color-text-secondary: #9f2d00;
  --color-text-tertiary: #374151;
  --color-other: #faf5ba;
  --background-image-banner: url('/banner/banner.jpg');
  --shadow-color-primary: rgba(126, 42, 12, 0.24);
  --shadow-color-secondary: rgba(245, 73, 0, 0.24);
}

.dark {
  --color-primary: #000000;
  --color-secondary: #3c0366;
  --color-component: #11172f;
  --color-subcomponent: #210040;
  --color-accent: #ad46ff;
  --color-text-primary: #e9d4ff;
  --color-text-secondary: #c995f9;
  --color-text-tertiary: #e5e7eb;
  --color-other: #d4fff5;
  --background-image-banner: url('/banner/banner_dark.jpg');
  --shadow-color-primary: rgba(233, 212, 255, 0.5);
  --shadow-color-secondary: rgba(173, 70, 255, 0.5);
}

h1 {
  @apply text-3xl md:text-4xl mb-8 mx-auto max-w-5xl text-text-primary;
}

h2 {
  @apply text-xl md:text-2xl font-bold text-text-secondary;
}

h3 {
  @apply text-xl font-bold py-4 text-text-secondary text-center;
}

section p {
  @apply text-text-tertiary;
}

video,
img {
  @apply rounded-xl shadow-[2px_2px_10px_9px_var(--shadow-color-secondary)];
}

.hover {
  @apply hover:opacity-70 transition-opacity cursor-pointer;
}

.icon-btn {
  @apply p-2 text-accent hover:scale-[1.1] hover:opacity-70 transition-opacity cursor-pointer;
}

.icon-decoration {
  @apply w-5 h-5;
}

.icon-action {
  @apply w-6 h-6;
}

.icon-header {
  @apply w-5 h-5;
}

.section-content {
  @apply mx-auto max-w-5xl md:px-4;
}

.show-pc {
  @apply hidden md:block;
}

.show-mobile {
  @apply flex sm:hidden;
}

.hidden-mobile {
  @apply hidden sm:flex;
}

/* Projects Section Styles */
.project-container {
  @apply mt-[10%] flex justify-between;
}

.project-container.right {
  @apply flex-col md:flex-row;
}

.project-container.left {
  @apply flex-col md:flex-row-reverse;
}

.project-media {
  @apply flex flex-col self-center w-full md:w-[40vw] z-20;
}

.project-content {
  @apply relative flex flex-col w-full md:w-[51vw] justify-center px-6 pb-1 rounded-lg 
         bg-component text-text-primary
         shadow-[0px_3px_8px_var(--shadow-color-primary)] z-10;
}

.project-content.right {
  @apply md:-left-4;
}

.project-content.left {
  @apply md:left-4;
}

.project-bottom {
  @apply flex flex-row mt-1 justify-between;
}

